[package]
name = "yeti"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
once_cell = "1.19.0"
encoding_rs = "0.8.34"
paste = "1.0.15"
serde = { version = "1.0.203", features = ["derive"]}
serde_derive = "1.0.203"
regex = "1.10.5"
sizedop_derive = { path = "./sizedop_derive" }
binary_serialize_derive = { path = "./binary_serialize_derive" }
serde_yml = "*"
clap = "4.5.8"
walkdir = "2.5.0"
log = "0.4.22"
env_logger = "0.11.5"
